add simple text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Hello math</title>
   </head>
   <body>
+    <h1>Hello math</h1>
+    <p>
+      This is a simple example of using math in a web application. The math
+      library is loaded dynamically.
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
