add note about latest version of math library

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>
       This is a simple example of using math in a web application. The math
       library is loaded dynamically.
+      Im sure it is latest version
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
