feat: display version information with commit hash and date

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Hello math</title>
   </head>
   <body>
+    <div id="version-info" style="padding: 5px 10px; background-color: #f8f9fa; border-bottom: 1px solid #dee2e6; font-size: 12px; color: #6c757d; text-align: center;">
+      <!-- Version information will be populated by JavaScript -->
+      Loading version information...
+    </div>
     <h1>Hello math</h1>
     <p>
       This is a simple example of using math in a web application. The math
