feat: implement routing with Navigo and restructure version display

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <title>Hello math</title>
   </head>
   <body>
-    <h1>Hello math</h1>
-    <p>
-      This is a simple example of using math in a web application. The math
-      library is loaded dynamically.
-      Im sure it is latest version
-    </p>
-    <div id="app"></div>
+    <div id="app">Loading...</div> <!-- Сюда будет рендериться контент страниц -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
