feat: add Three.js integration with dynamic rendering and routing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hello math</title>
   </head>
   <body>
-    <div id="app">Loading...</div> <!-- Сюда будет рендериться контент страниц -->
+    <div id="app">Loading...</div> 
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
