Add function plot Three.js scene

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="/counter" data-navigo>Counter</a></li>
           <li><a href="/three_cube" data-navigo>Cube Scene</a></li>
           <li><a href="/three_sphere" data-navigo>Sphere Scene</a></li>
+          <li><a href="/function_plot" data-navigo>3D Function Plot</a></li>
           <li><a href="/riemann" data-navigo>Riemann Zeros</a></li>
         </ul>
       </nav>
