--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="/three_cube" data-navigo>Cube Scene</a></li>
           <li><a href="/three_sphere" data-navigo>Sphere Scene</a></li>
           <li><a href="/function_plot" data-navigo>3D Function Plot</a></li>
+          <li><a href="/formula_graph" data-navigo>Formula Graph</a></li>
           <li><a href="/riemann" data-navigo>Riemann Zeros</a></li>
         </ul>
       </nav>
