add mock wishlist pages

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           <li><a href="/function_plot" data-navigo>Complex Plot Demo</a></li>
           <li><a href="/formula_graph" data-navigo>Formula Grapher</a></li>
           <li><a href="/riemann" data-navigo>Riemann Zeta Zeros</a></li>
+          <li><a href="/dashboard" data-navigo>Dashboard</a></li>
+          <li><a href="/collection" data-navigo>Collection</a></li>
+          <li><a href="/profile" data-navigo>Profile</a></li>
+          <li><a href="/login" data-navigo>Login</a></li>
+          <li><a href="/register" data-navigo>Register</a></li>
         </ul>
       </nav>
       <div id="content">Loading...</div>
