Add Ulam Spiral page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="/three_sphere" data-navigo><span class="icon">⚽</span> <span class="nav-text">Sphere Demo</span></a></li>
                     <li><a href="/function_plot" data-navigo><span class="icon">📈</span> <span class="nav-text">Complex Plot Demo</span></a></li>
                     <li><a href="/formula_graph" data-navigo><span class="icon">📝</span> <span class="nav-text">Formula Grapher</span></a></li>
+                    <li><a href="/ulam_spiral" data-navigo><span class="icon">🌀</span> <span class="nav-text">Ulam Spiral</span></a></li>
                     <li><a href="/riemann" data-navigo><span class="icon">ζ</span> <span class="nav-text">Riemann Zeros</span></a></li>
                 </ul>
             </details>
